[package]
name = "plate-handler"
version = "0.1.1"
authors = ["Adam Ernst <adamjernst@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.6"
env_logger = "0.8.1"
failure = "0.1.8"
futures = "0.3.7"
image = "0.23.12"
log = "0.4.11"
reqwest = { version = "0.10.8", features = ["json"] }
rusqlite = "0.24.1"
serde_json = "1.0.59"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded", "sync", "time"] }
tokio-tungstenite = "0.11.0"
tungstenite = { version = "0.11.0", default-features = false }
url = "2.2.0"
uuid = { version = "0.8.1", features = ["v4"] }
warp = "0.2.5"
